# translate_jt

./: README.md
jt-opencascade.org/JTAssistant/src/JTData/: JTData_GeometrySource.cxx
jt-opencascade.org/TKJT/src/JtAttribute/: JtAttribute_Base.cxx
translate-jt/: .gitignore  CMakeLists.txt  conanfile.py  gen_vc15.bat  pkg.bat
translate-jt/src/: CMakeLists.txt
translate-jt/src/Exchange/: AddMaterial.h  JtFileExchange.cpp  JtFileExchange.h
translate-jt/src/Standard/: stdafx.cpp  stdafx.h  translate-jt.cpp
